Added data project Added common project Moved around some common files Fixed webjob that was added so that it now starts and runs Added secrets settings for settings not to be committed in public repo Removed all instances of TestIdentity and replaced with JSONCapital

--- a/.gitignore
+++ b/.gitignore
@@ -235,3 +235,5 @@ _Pvt_Extensions
 .fake/
 
 **/wwwroot/lib
+WebJob.CoinTracking/appsettings.secrets.json
+WebJob.CoinTracking/appsettings.Development.secrets.json
