--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <UserSecretsId>aspnet-TestIdentity-35D6DE51-A385-4030-B17E-4130A918FC56</UserSecretsId>
     <AssemblyName>JSONCapital.Web</AssemblyName>
+    <RootNamespace>JSONCapital.Web</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <None Update="app.db" CopyToOutputDirectory="PreserveNewest" />
@@ -25,8 +26,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Remove="Data\Migrations\20180109055642_AddTradeTable.cs" />
-    <Compile Remove="Data\Migrations\20180109055642_AddTradeTable.Designer.cs" />
+    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Data\Data.csproj" />
   </ItemGroup>
     <Target Name="PrepublishScript" BeforeTargets="PrepareForPublish">
       <Exec Command="bower install" />
