Wired up DI container for WebJob. Wired up DI options for app settings including user secrets (for both Web and WebJob). Add model classes for CoinTracking service request/response (WIP). Add HMAC SHA 512 signing method for CoinTracking request properties.

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -6,4 +6,7 @@
     <RootNamespace>JSONCapital.Common</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Options\" />
+  </ItemGroup>
 </Project>
