--- a/Web/appsettings.json
+++ b/Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:emizzle.database.windows.net,1433;Initial Catalog=json-capital.local;Persist Security Info=False;User ID=emizzle-sql-dba;Password=y5RQpdJCZ8DY38#OfppO;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  "CoinTracking": {
+    "ApiEndpoint": "https://cointracking.info/api/v1/"  
   },
   "Logging": {
     "IncludeScopes": false,
