Updated scheduled task for downloading trade data. Currently receiving 400, possibly is sign value?

--- a/WebJob.CoinTracking/appsettings.json
+++ b/WebJob.CoinTracking/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+    "CoinTracking": {
+        "ApiEndpoint": "https://cointracking.info/api/v1/"
+    },
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
