--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -8,5 +8,9 @@
 
   <ItemGroup>
     <Folder Include="Options\" />
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
 </Project>
