Added Repository pattern. Fixed signing issue with CoinTracking API. Updated logging, set min level to Trace. Added testing framework, though it's very much a WIP (currently doesn't even build). Need to get our trade data from the Postman mock server.

--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
+    <AssemblyName>JSONCapital.Services</AssemblyName>
+    <RootNamespace>JSONCapital.Services</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -14,6 +16,8 @@
     <Folder Include="Json\" />
     <Folder Include="Json\Converters\" />
     <Folder Include="Helpers\" />
+    <Folder Include="Repositories\" />
+    <Folder Include="Exceptions\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
