--- a/WebJob.CoinTracking/WebJob.CoinTracking.csproj
+++ b/WebJob.CoinTracking/WebJob.CoinTracking.csproj
@@ -4,6 +4,8 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <UserSecretsId>JSONCapital.WebJob.CoinTracking-35D6DE51-A385-4030-B17E-4130A918FC56</UserSecretsId>
+    <RootNamespace>JSONCapital.WebJob.CoinTracking</RootNamespace>
+    <AssemblyName>JSONCapital.WebJob.CoinTracking</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
