--- a/WebJob.CoinTracking/appsettings.json
+++ b/WebJob.CoinTracking/appsettings.json
@@ -2,10 +2,23 @@
     "CoinTracking": {
         "ApiEndpoint": "https://cointracking.info/api/v1/"
     },
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Warning"
+    "Logging": {
+        "IncludeScopes": false,
+        "Debug": {
+            "LogLevel": {
+                "Default": "Information"
+            }
+        },
+        "Console": {
+            "LogLevel": {
+                "Microsoft.AspNetCore.Mvc.Razor.Internal": "Warning",
+                "Microsoft.AspNetCore.Mvc.Razor.Razor": "Debug",
+                "Microsoft.AspNetCore.Mvc.Razor": "Error",
+                "Default": "Trace"
+            }
+        },
+        "LogLevel": {
+            "Default": "Trace"
+        }
     }
-  }
 }
