added trade data model properties (have not added DB migration yet). added datetimeconverter for unix timestamp. added some code to integration test, but needs work (WIP).

--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Folder Include="Options\" />
     <Folder Include="Extensions\" />
+    <Folder Include="Json\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
