--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -28,5 +28,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Services\Services.csproj" />
   </ItemGroup>
 </Project>
