--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="2.0.0" />
+    <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="1.7.14" />
   </ItemGroup>
 
   <ItemGroup>
