--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="Microsoft.Extensions.SecretManager.Tools" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="2.0.0" />
     <PackageReference Include="Moq" Version="4.8.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
